erDiagram
    %% "Схема управления кинотеатром"

    HALL {
        int id PK
        string name
        int capacity
        int hall_layout_id FK
    }

    HALL_LAYOUT {
        int id PK
        string name
        json layout_config
    }

    HALL_SEAT {
        int id PK
        int hall_layout_id FK
        int row_number
        int seat_number
        string seat_type
        decimal price_multiplier
    }

    MOVIE {
        int id PK
        string title
        string description
        int duration_minutes
        string genre
        decimal rating
    }

    SESSION {
        int id PK
        int hall_id FK
        int movie_id FK
        datetime start_time
        datetime end_time
        decimal base_price
    }

    CUSTOMER {
        int id PK
        string first_name
        string last_name
        string email
        string phone
    }

    SEAT_PRICING {
        int id PK
        int session_id FK
        int hall_seat_id FK
        decimal price_multiplier
        string comment
    }

    TICKET {
        int id PK
        int session_id FK
        int hall_seat_id FK
        int customer_id FK
        decimal price
        datetime purchase_time
    }

    HALL ||--o{ SESSION : "используется"
    MOVIE ||--o{ SESSION : "транслируется"
    HALL_LAYOUT ||--o{ HALL_SEAT : "определяет"
    HALL_LAYOUT ||--o{ HALL : "схема зала"
    SESSION ||--o{ TICKET : "билет на сеанс"
    CUSTOMER ||--o{ TICKET : "покупка"
    SESSION ||--o{ SEAT_PRICING : "спец.цены(сеанс)"
    HALL_SEAT ||--o{ SEAT_PRICING : "спец.цены(место)"
    HALL_SEAT ||--o{ TICKET : "бронь"
